Revision history for Perl module Debuggit


2.05_1 Mar 11, 2015
    - fix warnings in newer versions of Perl
        - thanks to ANDK for the patch
        - closes RT/90433

2.05 Nov  5, 2013
    - more distro fixes:
        - remove evil stuff that had crept into MANIFEST
        - updated MANIFEST.SKIP to hopefully keep that from happening again
        - moved POD tests to xt/ so they can't cause install failures
        - fixed Makefile.PL to generate both META.yml *and* META.json

2.04 Feb 15, 2013
    - added support for Data::Printer via a new config option
    - DUMP function (with Data::Dumper) now sorts hash keys
    - doco for DataPrinter option, plus more doco tweaks
    - fixed many distribution/testing errors:
        - added configure_requires for YAML::Tiny
            - should fix UNKNOWN reports on CPAN Testers
        - revamped default_funcs.t to work on Windows
        - added testing Perl snippet framework to work across Windows/Linux
            - working with DANBOO to get this stuff into Test::Command
        - now sorting Data::Dumper hash keys in all tests too

2.03 Dec 30, 2012
    - very slight doco tweaks
    - fixed Module::Install version as per Miyagawa
        (http://weblog.bulknews.net/post/33907905561/do-not-ship-modules-with-module-install-1-04)

2.02 Feb 19, 2012
    - fixed annoying "redefined" warnings
    - fixed annoying "naked subroutines" test failures for callers of Debuggit
        - proper handling of Pod::Coverage's absence in t/pod_coverage.t
    - can now override the system wide DEBUG for a specific module
    - adding another test to insure no additional memory is used
        - refactored t/nomem1.t to match t/nomem2.t
        - more cautious handling of Memory::Usage to avoid non-Linux problems
    - updated / extended all POD
        - now have main POD, manual, and cookbook
    - fixed the problem with Moose classes autocleaning DEBUG

2.01 Jul 29, 2011
    - initial CPAN release
    - updates to POD